# torch-shape-analyzer

./: Cargo.toml  main.py
src/: main.rs
