[package]
name = "torch-shape-analzyer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
enderpy_python_parser = "0.1.0"
tree-sitter = "0.20.10"
tree-sitter-python = "0.20.4"

